# PersonalAI_Agent

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
app/application/agent/: agent_use_case.py  graph.py  nodes.py  prompts.py  state.py  tools.py
app/application/auth/: dtos.py  security_service.py  use_cases.py
app/application/chat/: dtos.py  memory_service.py  rag_service.py  retriever_service.py
app/application/interfaces/: calendar_port.py  embedding_port.py  github_port.py  llm_port.py  mail_port.py  speech_port.py  storage_port.py  vector_db_port.py
app/application/profile/: background_orchestrator.py  chunking_service.py  dtos.py  embedding_service.py  github_service.py  knowledge_document_service.py  qdrant_service.py  repository_sync_service.py  resume_processor.py  scheduling_service.py  use_cases.py
app/application/scheduling/: dtos.py  use_cases.py
app/application/voice/: call_session_service.py  twilio_voice_pipeline.py
app/core/: audio_utils.py  config.py  exceptions.py  logging.py  security.py  telemetry.py
app/domain/auth/: entities.py  repository_interfaces.py  value_objects.py
app/domain/chat/: entities.py  repository_interfaces.py
frontend/: package-lock.json  package.json
scripts/: inspect_retrieval.py  recreate_collection.py  reproduce_ingestion_failure.py  retrieval_output.txt  test_chat_rag.py  test_embedding_rate_limits.py  test_local_ingestion.py  test_pipeline_wiring.py  test_qdrant_upsert.py  test_rag.py  test_signup.py  update_twilio_webhook.py
(+79 files in other folders)
