[tool.poetry]
name = "ai-digital-twin-backend"
version = "0.1.0"
description = "FastAPI backend for AI Shivam"
authors = ["Shivam <shivam@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = "^0.28.0"
pydantic = "^2.6.4"
pydantic-settings = "^2.2.1"
sqlalchemy = "^2.0.28"
asyncpg = "^0.29.0"
alembic = "^1.13.1"
redis = "^5.0.3"
qdrant-client = "^1.8.0"
langgraph = "^0.0.30"
celery = "^5.3.6"
boto3 = "^1.34.69"
python-jose = "^3.3.0"
passlib = "^1.7.4"
loguru = "^0.7.2"

[tool.ruff]
line-length = 88
target-version = "py311"
